--- a/songify-master/Javascript Class 4/main.css
+++ b/songify-master/Javascript Class 4/main.css
@@ -1,166 +1,295 @@
-*,
-*:after,
-*:before {
-    box-sizing: border-box;
-}
+		*,
+		*:after,
+		*:before {
+			box-sizing: border-box;
+		}
 
-html,
-body {
-    height: 100%;
-    width: 100%;
-    border: 0;
-    margin: 0;
-    font-size: 16px;
-}
+		html,
+		body {
+			height: 100%;
+			width: 100%;
+			border: 0;
+			margin: 0;
+			font-size: 16px;
+		}
 
-h1 {
-    border: 0;
-    margin: 0;
-}
+		h1 {
+			border: 0;
+			margin: 0;
+		}
 
-.wrapper {
-    height: 100%;
-    width: 100%;
-    background-color: #BBB;
-}
+		.wrapper {
+			height: 100%;
+			width: 100%;
+		   
+			
+		}
 
-.welcome-screen {
-    height: 100%;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
+		.welcome-screen {
+			height: 100%;
+			width: 100%;
+			display: flex;
+			flex-direction: column;
+			justify-content: center;
+			align-items: center;
+			 background: url("img/fifth.jpg");
+			background-size: cover;
+		}
 
-.main {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    color: white;
-    background-color: #1f1f1f;
-}
+		.main {
+			width: 100%;
+			height: 100%;
+			display: flex;
+			flex-direction: column;
+			color: white;
+			 background: url("http://thiswallpaper.com/cdn/hdwallpapers/650/guitar%20cool%20pictures%20for%20desktop%20background.jpg");
+			background-size: cover;
+		 
+		}
 
-.main header {
-    height: 80px;
-    background-color: #282828;
-    padding: 1rem;
-    color: #FFF;
-}
+		.main header {
+			height: 80px;
+		  
+			padding: 1rem;
+			color: #FFF;
+		}
 
-.main .content {
-    flex:1;
-    background-color: #1f1f1f;
-}
+		.main .content {
+			flex:1;
+		  
+		}
 
-.main footer {
-    height: 80px;
-    background-color: #282828;
-    padding-top: 1rem;
-}
+		.main footer {
+			height: 80px;
+		   
+			padding-top: 1rem;
+		}
 
-.player-buttons {
-    display:flex;
-    font-size: 1.5rem;
-    justify-content: center;
-    align-items: center;
-}
+		.player-buttons {
+			display:flex;
+			font-size: 1.5rem;
+			justify-content: center;
+			align-items: center;
+		}
 
-.hidden {
-    display: none;
-}
+		.hidden {
+			display: none;
+		}
 
-.right.floated {
-    float: right;
-}
+		.right.floated {
+			float: right;
+		}
 
-.clickable {
-    cursor: pointer;
-}
+		.clickable {
+			cursor: pointer;
+		}
 
-.error {
-    border: 2px solid red;
-}
+		.error {
+			border: 2px solid red;
+		}
 
-.progress-wrapper {
-    margin-top: 0.3rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
+		.progress-wrapper {
+			margin-top: 0.3rem;
+			display: flex;
+			justify-content: center;
+			align-items: center;
+		}
 
-.progress-wrapper span {
-    color: #959595;
-}
+		.progress-wrapper span {
+			color: #959595;
+		}
 
-.player-progress {
-    height: 8px;
-    width: 700px;
-    background-color: #3d3d3d;
-    border-radius: 4px;
-    margin-right: 6px;
-    margin-left: 6px;
-}
+		.player-progress {
+			height: 8px;
+			width: 700px;
+			background-color: #3d3d3d;
+			border-radius: 4px;
+			margin-right: 6px;
+			margin-left: 6px;
+		}
 
-.progress-filled {
-    background-color: #959595;
-    height: 8px;
-    border-radius: 4px;
-    width: 0;
+		.progress-filled {
+			background-color: #959595;
+			height: 8px;
+			border-radius: 4px;
+			width: 0;
 
-}
+		}
 
-.main .content {
-    width: 800px;
-    margin: 2rem auto;
-}
+		.main .content {
+			width: 800px;
+			margin: 2rem auto;
+		}
 
-.list-headers {
-    padding-bottom: 0.5rem;
-    border-bottom: 1px solid rgba(255,255,255,0.5);
-}
+		.list-headers {
+			padding-bottom: 0.5rem;
+			border-bottom: 1px solid rgba(255,255,255,0.5);
+		}
 
-.list-headers > div {
-    width: 150px;
-    display: inline-block;
-}
+		.list-headers > div {
+			width: 150px;
+			display: inline-block;
+		}
 
-.list-headers > div:first-child {
-    width: 330px;
-}
+		.list-headers > div:first-child {
+			width: 330px;
+		}
 
-.list-headers > div:last-child {
-    text-align: right;
-}
+		.list-headers > div:last-child {
+			text-align: right;
+		}
 
-.song-list .song {
-    padding-top: 0.5rem;
-    padding-bottom: 0.5rem;
-    border-bottom: 1px solid rgba(255,255,255,0.5);
-    min-height: 30px;
-    cursor: pointer;
-}
+		.song-list .song {
+			padding-top: 0.5rem;
+			padding-bottom: 0.5rem;
+			border-bottom: 1px solid rgba(255,255,255,0.5);
+			min-height: 30px;
+			cursor: pointer;
+		}
 
-.song > span {
-    display: inline-block;
-    width: 150px;
-    overflow: hidden;
-    height: 1rem;
-}
-.song > span:first-child {
-    width: 330px;
-}
+		.song > span {
+			display: inline-block;
+			width: 150px;
+			overflow: hidden;
+			height: 1rem;
+		}
+		.song > span:first-child {
+			width: 330px;
+		}
 
-.song .song-duration {
-    text-align: right;
-}
+		.song .song-duration {
+			text-align: right;
+		}
 
-.song-list .song:hover {
-    background-color: #282828;
-}
+		.song-list .song:hover {
+			background-color: #282828;
+		}
 
 
-.song-length {
-    text-align: right;
-}
+		.song-length {
+			text-align: right;
+		}
+
+		.content {
+			position: relative;
+
+		}
+		.current-song-wrapper {
+			position: absolute;
+			bottom: 110px;
+			left: 282px;
+			display: flex;
+		}
+
+		.current-song-image {
+			height: 100px;
+			width: 100px;
+			margin-right: 1rem;
+		}
+
+		.current-song-name {
+			font-size: 1.4rem;
+			margin-top: 4px;
+			margin-bottom: 0;
+		}
+
+		.current-song-album {
+			margin-top: 0.4rem;
+		}
+
+				  /*DataTables overrides*/
+		table.dataTable tbody tr {
+			background-color: initial;
+			
+		}
+		#songs_info {
+			display: none;
+		}
+		table.music {
+			width: 100% !important;
+		}
+
+
+		#songs_filter {
+			color: #0277BD;
+			font-size: 20px;
+		}
+		#songs_filter input {
+			width: 400px;
+			margin-bottom: 1rem;
+			font-size: 16px;
+			border-radius: 10px;
+		}
+
+		}
+		input:focus {
+			outline:none !important;
+		}
+
+		.player-buttons .fa {
+			margin-right: 2rem;
+		}
+
+		.fa.disabled {
+			color: gray;
+		}
+
+		.music{
+			cursor: pointer;
+			
+		}
+
+		.song:hover{
+			color: #880E4F;
+			background-color:#BCAAA4;
+		}
+
+		}
+		  input#slider{
+			  width:90px;
+		  }  
+		.volumeicon{
+			margin-left:30px;
+			margin-right:15px;
+		}  
+
+
+		.name{
+			font-family: 'Dancing Script', cursive;
+			font-size: 35px;
+			
+		}
+		.box{
+			padding: 8px 10px;
+			margin: 8px 0px;
+			 box-sizing: border-box;
+			 height: 40px;
+			 border-radius: 2px;
+			
+		}
+
+		.button {
+		  display: inline-block;
+		  padding: 15px 20px;
+		  font-size: 12px;
+		  cursor: pointer;
+		  text-align: center;
+		  text-decoration: none;
+		  outline: none;
+		  color: #fff;
+		  background-color: #4CAF50;
+		  border: none;
+		  border-radius: 15px;
+		  box-shadow: 0 9px #999;
+		  position: relative;
+		  top: -4px;
+		 
+		}
+
+		.button:hover {background-color: #3e8e41}
+
+		.button:active {
+		  background-color: #3e8e41;
+		  box-shadow: 0 5px #666;
+		  transform: translateY(4px);
+		}
